feat: add notifications menu item and implement push notifications
- Added a "Notifications" menu item in the HomeScreen for navigation.
- Created a new Notifications screen to handle push notifications.
- Integrated Expo Notifications for sending and receiving push notifications.
- Updated package.json and package-lock.json to include necessary dependencies for notifications.
- Added eas.json for EAS build configuration.
- Included google-services.json for Firebase integration.

--- a/app.json
+++ b/app.json
@@ -12,6 +12,9 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.tech.ExpoAuthApp",
+      "googleServicesFile": "./google-services.json",
+      "useNextNotificationsApi": true,
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -38,11 +41,27 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#E6F4FE",
+          "androidMode": "default",
+          "androidCollapsedTitle": "New notification"
+        }
       ]
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "79567574-f34c-4903-aeb7-202187cc2049"
+      }
+    },
+    "owner": "vishnu_expo"
   }
 }
